Fix portal/letter-cell spacing at small window sizes

--- a/styles/portals/letter-cell.scss
+++ b/styles/portals/letter-cell.scss
@@ -14,7 +14,8 @@
     }
 
     > .osw-button {
-      width: 100%
+      padding: 0;
+      width: 100%;
     }
   }
 }
